# coproto

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.py
.github/workflows/: build-test.yml
cmake/: Config.cmake.in  buildOptions.cmake  buildOptions.cmake.in  coprotoConfig.cmake  coprotoConfigVersion.cmake  coprotoFindDeps.cmake  preamble.cmake
cmake/testProject/: CMakeLists.txt  CMakePresets.json  src.cpp
coproto/: CMakeLists.txt  config.h.in
coproto/Common/: CLP.cpp  Exceptions.h  InlinePoly.h  Queue.h  Util.cpp  error_code.cpp  span.h
coproto/Proto/: Buffers.h  Operation.h  SessionID.h
coproto/Socket/: AsioSocket.cpp  AsioSocket.h  BufferingSocket.h  Executor.h  RecvOperation.h  SendOperation.h  Socket.h  SocketFork.h  SocketScheduler.cpp  SocketScheduler.h
frontend/: CMakeLists.txt  SocketTutorial.cpp  SocketTutorial.h  cpp14Tutorial.cpp  cpp14Tutorial.h  cpp20Tutorial.cpp  cpp20Tutorial.h  main.cpp
misc/: todo.txt
tests/: AsioSocket_tests.cpp  AsioSocket_tests.h  AsioTlsSocket_tests.cpp  AsioTlsSocket_tests.h  BufferingSocket_tests.cpp  BufferingSocket_tests.h  CMakeLists.txt  InlinePoly.cpp  LocalAsyncSocket_tests.cpp  LocalAsyncSocket_tests.h  Queue_tests.cpp  SocketScheduler_tests.cpp  SocketScheduler_tests.h  TaskProto14_tests.cpp  TaskProto14_tests.h  TaskProto_tests.cpp  TaskProto_tests.h  Tests.cpp  Tests.h  TypeTraits.cpp  config.h.in  eval.h
tests/cert/: ca.cert.pem  ca.cert.srl  ca.key.pem  client-0.cert.pem  client-0.csr.pem  client-0.key.pem  readme.txt  server-0.cert.pem  server-0.csr.pem  server-0.key.pem
